RESOLVED FIXED272167
[GStreamer] Ignore sinks position while seeking
https://bugs.webkit.org/show_bug.cgi?id=272167
Summary [GStreamer] Ignore sinks position while seeking
Enrique Ocaña
Reported 2024-04-04 10:44:49 PDT
After removing MSE data, sinks get flushed and are not able to return valid playback time. Some implementation return invalid time, 0.00 or even some random value. This value may be then reported up to HTMLMediaElement and that may be confusing to web applications. See: https://github.com/WebPlatformForEmbedded/WPEWebKit/pull/1302
Attachments
Enrique Ocaña
Comment 1 2024-04-04 10:53:33 PDT
EWS
Comment 2 2024-04-16 06:27:14 PDT
Committed 277541@main (40cfa6a61706): <https://commits.webkit.org/277541@main> Reviewed commits have been landed. Closing PR #26856 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-04-16 06:28:16 PDT
Note You need to log in before you can comment on or make changes to this bug.